# masuri

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  test_accuracy.sh
docs/: android-integration.md  issues.md  porting-guide.md
docs/iterations/: 001.md  002-006.md  007-008.md  009-013.md  014-final.md
src/: img_scanner.rs  lib.rs  main.rs  python.rs  scanner.rs  scanner_neon.rs
src/decoder/: code128.rs  ean.rs  mod.rs
