[package]
name = "masuri"
version = "0.1.0"
edition = "2021"
description = "Fast barcode decoder for Code128/EAN/UPC - Rust port of zbar with NEON SIMD and rayon parallelism"
license = "LGPL-2.1-or-later"
authors = ["wonsup"]
repository = "https://github.com/TeamMilestone/masuri"
homepage = "https://github.com/TeamMilestone/masuri"
keywords = ["barcode", "code128", "ean", "upc", "zbar"]
categories = ["multimedia::images", "encoding"]
readme = "README.md"

[[bin]]
name = "masuri"
path = "src/main.rs"

[lib]
name = "masuri"
path = "src/lib.rs"

[dependencies]
image = "0.25"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
