[package]
name = "masuri"
version = "0.1.2"
edition = "2021"
description = "Fast barcode decoder for Code128/EAN/UPC - Rust port of zbar with NEON SIMD and rayon parallelism"
license = "LGPL-2.1-or-later"
authors = ["wonsup"]
repository = "https://github.com/TeamMilestone/masuri"
homepage = "https://github.com/TeamMilestone/masuri"
keywords = ["barcode", "code128", "ean", "upc", "zbar"]
categories = ["multimedia::images", "encoding"]
readme = "README.md"

[[bin]]
name = "masuri"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["android"]

[lib]
name = "masuri"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25"
rayon = "1.10"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
uniffi = { version = "0.28", optional = true, features = ["cli"] }

[features]
default = []
python = ["pyo3"]
android = ["uniffi"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
