[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "masuri"
version = "0.1.1"
description = "Fast barcode decoder for Code128/EAN/UPC - 6x faster than zbar"
license = {text = "LGPL-2.1-or-later"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
]

[tool.maturin]
features = ["python"]
